add google font, change styling

--- a/raffie-frontend/src/App.css
+++ b/raffie-frontend/src/App.css
@@ -1,6 +1,6 @@
 .App {
   text-align: center;
-  font-family: 'Courier New', Courier, monospace;
+  font-family: 'Bebas Neue', sans-serif;
   
 }
 
@@ -17,7 +17,7 @@
   }
 }
 .main-header {
-  font-size: calc(10px + 2vmin);
+  font-size: calc(40px + 2vmin);
  
 }
 .App-body {
