--- a/raffie-frontend/src/App.css
+++ b/raffie-frontend/src/App.css
@@ -14,7 +14,7 @@
 }
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
-    animation: App-logo-spin infinite 10s linear;
+    /* animation: App-logo-spin infinite 10s linear; */
   }
 }
 .main-header {
