add email entry option

--- a/raffie-frontend/src/App.css
+++ b/raffie-frontend/src/App.css
@@ -9,6 +9,9 @@
   padding: 10px;
   /* pointer-events: none; */
 }
+.standard-font {
+  font-family: 'Bebas Neue', sans-serif;
+}
 .small-raffle-ticket {
   height: 20vmin;
 }
